2008-05-13  P. Henrique Silva  <henrique@astro.ufsc.br>

	* setup-chimera.bat:
	* setup-chimera.sh:
	* TODO:
	* MANIFEST.in: Not needed anymore, setuptools handles this for us.

	* README: New text.
	* setup.py:
	* setup.cfg:
	* ez_setup.py: New setuptools script. Much more smart, with
	automatic dependency handling and PyPI support. See ups at
	http://pypi.python.org/pypi/chimera-python! Now you can use
	easy_install with chimera!

2008-05-13  P. Henrique Silva  <henrique@astro.ufsc.br>
	* src/chimera/util/imagesave.py: Fix BSCALE/BZERO.

	* src/chimera/drivers/sbig/sbig.py:
	* src/chimera/drivers/optectcfs.py:
	* src/chimera/drivers/domelna40cm.py
	* src/chimera/drivers/meade.py:
	* src/chimera/instruments/focuser.py:
	* src/chimera/instruments/telescope.py:
	* src/chimera/instruments/camera.py:
	Fix abort where available.
	Port to new lock scheme.

	* src/chimera/instruments/tests/test_telescope.py:
	* src/chimera/instruments/tests/test_camera.py: Improved test with
	abort testing.

	* src/chimera/instruments/dome.py: New dome implementation, with
	fixed tracking telescope support.

	* src/chimera/instruments/tests/test_dome.py: Test new dome
	implementation.

2008-05-13  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/core/rwlock.py:
	* src/chimera/core/lockwrapper.py
	* src/chimera/core/constants.py:
	* src/chimera/core/monitor.py: New locking infrastructure.

	* src/chimera/core/tests/test_locks.py: Update test to new lock
	infrastructure.

	* src/chimera/core/metaobject.py: Add locking to default base object.

	* src/chimera/core/chimeraobject.py:
	Add new lock infrastructure wrapper methods.
	Add support for thread-safe config set/get.
	New look __control__ algorithm.

	* src/chimera/core/manager.py:
	Better stop algorithm.
	Use new loop field in the resources manager.
	Use new loop aborting scheme.

	Remove thread pool support. Thread pool should be handled by the
	user.

	* src/chimera/core/resources.py: Add loop thread field.